# TantraFlow

./: LICENSE  README.md  index.html  pyproject.toml  requirements.txt  start.bat  start.sh
backend/: db.py  main.py
backend/engine/: executor.py  workflow_library.py  workflow_seeder.py
backend/routers/: agents.py  chat.py  logs.py  models.py  skills.py  workflows.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: api.js  app.js  utils.js
frontend/js/pages/: agents.js  builder.js  chat.js  dashboard.js  logs.js  models.js  settings.js  skills.js  workflows.js
