[project]
name = "agentic-platform"
version = "2.0.0"
description = "Visual multi-agent workflow builder and orchestrator"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "python-multipart==0.0.20",
    "aiofiles==24.1.0",
    "httpx==0.28.1",
    "anyio==4.8.0",
    "starlette==0.41.3",
]

[tool.setuptools]
package-dir = {"" = "backend"}
